# cync2mqtt

./: Dockerfile  Dockerfile.debian  README.docker.md  README.md  compose.yml  config.yaml  cync_mesh_example.yaml  requirements.python3.10.txt  run.sh  setup.cfg  setup.py
.github/workflows/: publish-containers.yml
docker/: Dockerfile
src/: cync2mqtt  get_cync_config_from_cloud
src/acync/: __init__.py  mesh.py
