[metadata]
name = cync2mqtt
version = 0.0.1
author = Jon Krause
author_email = 29214674+juanboro@users.noreply.github.com
description = Bridge CYNC mesh to MQTT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juanboro/cync2mqtt
project_urls =
    Bug Tracker = https://github.com/juanboro/cync2mqtt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = 
    acync
python_requires = >=3.7
scripts =
    src/cync2mqtt
install_requires =
    amqtt
    bleak
    requests
    pycryptodome

[options.packages.find]
where = src
